畝の基本情報を取得する
